# biguasim

./: .gitignore  .readthedocs.yaml  CLAUDE.md  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
biguasim_docs/: README.md  conf.py  index.rst  packages.md
biguasim_docs/_static/: custom_style.css
biguasim_docs/agents/: agents.rst
biguasim_docs/agents/agents/: blue-boat-agent.rst  blue-rov-heavy-agent.rst  coug-uv-agent.rst  djimatrice-agent.rst  torpedo-auv-agent.rst  turtle-agent.rst  uav-agent.rst
biguasim_docs/agents/docs/: agent-config.rst  control-abstractions.rst  fossen-based-dynamics.rst
biguasim_docs/biguasim/: commands.rst  exceptions.rst  lcm.rst  packagemanager.rst  sensors.rst  shmem.rst  spaces.rst  weather.rst
biguasim_docs/changelog/: changelog.rst
biguasim_docs/develop/: agents.rst  develop.rst  start.rst  troubleshooting.rst
biguasim_docs/develop/env-docs/: create-env.rst  package-env.rst
biguasim_docs/examples/: examples.rst
biguasim_docs/examples/examples/: camera.rst  controller.rst  custom-dynamics.rst  multi-agent.rst  multi-coms.rst  pd-controllers.rst  sonar_imaging.rst  sonar_sidescan.rst
biguasim_docs/sensors/: sensors.rst
biguasim_docs/sensors/docs/: octree.rst  publishing.rst  sensor-config.rst
biguasim_docs/sensors/sensors/: camera-sensor.rst  dvl-sensor.rst  dynamics-sensor.rst  imu-sensor.rst  pose-sensor.rst  singlebeam-sonar-sensor.rst  viewport-capture-sensor.rst
biguasim_docs/usage/: environments.rst  installation.rst  scenarios.rst  semaphores.rst
install/: local_setup.sh  setup.sh
log/: latest_build
src/biguasim/: __init__.py  agents.py  biguasim.py  biguasimclient.py  command.py  environments.py  exceptions.py  packagemanager.py  sensors.py  shmem.py  util.py  weather.py
src/biguasim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/biguasim/ardubridge/: .gitignore  README.md  __init__.py  bridge.py  frame.py  mock_bridge_json.py  mock_bridge_mavlink.py  pyproject.toml  runner.py  vehicle.py
src/biguasim/certs/: server.crt
src/biguasim/dynamics/: .gitignore  agents.py  base_model.py  control.py  plot_rotors.py  uav.py  usv.py  utils.py  uuv.py
(+21 files in other folders)
