[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biguasim"
version = "1.0.0"
description = "Autonomous Underwater Vehicle Simulator"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Easton Potokar" },
    { name = "Spencer Ashford" },
    { name = "BYU FRoSt & PCCL Labs", email = "contagon@byu.edu" }
]
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = [
    "numpy<=1.26.4",
    "scipy",
    'posix_ipc >= 1.0.0; platform_system == "Linux"',
]

[project.urls]
Homepage = "https://bitbucket.org/frostlab/biguasim"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
