[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biguasim"
version = "1.0.0"
description = "Hybrid aerial-water Vehicle Simulator"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Matheus G. Mateus" },
    { name = "Henrique Reichow" },
    { name = "NAUTEC", email = "nateucgestao@gmail.com" }
]
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = [
    # Core
    'posix_ipc >= 1.0.0; platform_system == "Linux"',
    "numpy>=1.26.4",
    "typing-extensions>=4.12",
    # Testing / Dev
    "pytest==8.3.5",
]

[project.urls]
Homepage = "https://bitbucket.org/frostlab/biguasim"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
